# mlip_smoothness_evals

./: .gitignore  README.md  pyproject.toml
examples/: compare_models.py  compare_worker.py  run_comparison.sh  smoothness_demo.py
examples/frame_videos/: boundary_crossing.py  cutoff.py  diatomic.py  displacement_scan.py  frame_video.py
src/mlip_smoothness_eval/: __init__.py  report.py  runner.py  structures.py  utils.py
src/mlip_smoothness_eval/checks/: __init__.py  base.py  boundary_crossing.py  boundary_crossing2.py  bsct.py  cutoff.py  diatomic.py  displacement_scan.py  force_jacobian.py  nonconservativity.py  nve_drift.py  translational_equivariance.py
src/mlip_smoothness_eval/examples/: bsct_demo.py  compare_models.py  compare_worker.py  run_comparison.sh  smoothness_demo.py
src/mlip_smoothness_eval/examples/frame_videos/: boundary_crossing.py  boundary_crossing2.py  cutoff.py  diatomic.py  displacement_scan.py  frame_video.py  translational_equivariance.py
src/mlip_smoothness_eval/viz/: __init__.py  curves.py  gifs.py  pca_surface.py  theme.py
tests/: conftest.py  test_lj_groundtruth.py  test_report_and_viz.py
